[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/Main Menu.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Main Menu/ShopDisplayClickable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Item Images/Agility.png" type="Texture" id=5]
[ext_resource path="res://Assets/Item Images/Stamina.png" type="Texture" id=6]
[ext_resource path="res://Assets/Coin.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 28
font_data = ExtResource( 8 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/NinePatch 2.png-9001a897021d635897afce894cdd701b.stex"

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=19]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 49
font_data = ExtResource( 8 )

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/Jajan Simulator Nine Patch Rect GUI.png-d8ac364f7b52f3787f2ad02db187a9a4.stex"

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 27
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
size = 31
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/Jajan Simulator Nine Patch Rect GUI.png-d8ac364f7b52f3787f2ad02db187a9a4.stex"

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=14]
flags = 4
load_path = "res://.import/Jajan Simulator Nine Patch Rect GUI.png-d8ac364f7b52f3787f2ad02db187a9a4.stex"

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/NinePatch 2.png-9001a897021d635897afce894cdd701b.stex"

[sub_resource type="DynamicFont" id=16]
size = 80
font_data = ExtResource( 3 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1066, -406 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="MainMenu" type="Sprite" parent="Panel"]
position = Vector2( 640, 360 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -219.0
margin_right = 296.0
margin_bottom = -143.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "SHOP"
align = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 194.0
margin_top = 287.0
margin_right = 620.0
margin_bottom = 334.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 17 )
text = "Note: The player will utilize the highest-level upgrade purchased. Upgrades do not stack!"
autowrap = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 55.0
margin_top = 630.0
margin_right = 525.0
margin_bottom = 810.0
rect_scale = Vector2( 0.2, 0.2 )
texture = SubResource( 2 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -80.0
margin_right = 130.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="BackButton" type="Button" parent="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 470.0
margin_bottom = 180.0

[node name="AgilityLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -373.0
margin_right = 151.0
margin_bottom = -327.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 6 )
text = "Agility"
align = 1

[node name="Purchased" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -151.0
margin_right = 212.0
margin_bottom = -105.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.0313726, 0.607843, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "STAMINA II PURCHASED!"
align = 1

[node name="NotEnoughMoney" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -151.0
margin_right = 212.0
margin_bottom = -105.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 0.117647, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Not enough money!"
align = 1

[node name="CoinsTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -474.0
margin_right = 151.0
margin_bottom = -428.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 7 )
text = "Coins:"
align = 1

[node name="PlayerCoins" type="Label" parent="CoinsTitle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = 20.0
margin_right = 18.0
margin_bottom = 58.0
grow_horizontal = 2
custom_fonts/font = SubResource( 8 )
text = "100000"
align = 1

[node name="Coin" type="Sprite" parent="CoinsTitle/PlayerCoins"]
position = Vector2( -14, 20 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="AgilityInfo" type="NinePatchRect" parent="."]
visible = false
margin_left = 461.0
margin_top = 507.0
margin_right = 815.0
margin_bottom = 627.0
texture = SubResource( 9 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 40

[node name="Coin" type="Sprite" parent="AgilityInfo"]
position = Vector2( 24, 95 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="LabelTitle" type="Label" parent="AgilityInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -56.0
margin_right = 154.0
margin_bottom = -28.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 10 )
text = "Stamina II"
align = 1

[node name="Label" type="Label" parent="AgilityInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -23.5
margin_right = 135.0
margin_bottom = 21.5
grow_horizontal = 2
custom_fonts/font = SubResource( 11 )
text = "Your max carry weight will be increased by 20%"
align = 1
autowrap = true

[node name="Price" type="Label" parent="AgilityInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 22.0
margin_right = -90.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 12 )
text = "1000"
align = 1

[node name="AgilityContainer" type="HBoxContainer" parent="."]
margin_left = 461.0
margin_top = 397.0
margin_right = 969.0
margin_bottom = 437.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 254

[node name="Control" parent="AgilityContainer" instance=ExtResource( 4 )]
margin_right = 0.0
margin_bottom = 40.0

[node name="ItemImg" parent="AgilityContainer/Control/ShopDisplay" index="0"]
texture = ExtResource( 5 )

[node name="Label" parent="AgilityContainer/Control/ShopDisplay" index="3"]
text = "I"

[node name="Control2" parent="AgilityContainer" instance=ExtResource( 4 )]
margin_left = 254.0
margin_right = 254.0
margin_bottom = 40.0

[node name="ItemImg" parent="AgilityContainer/Control2/ShopDisplay" index="0"]
texture = ExtResource( 5 )

[node name="Label" parent="AgilityContainer/Control2/ShopDisplay" index="3"]
text = "II"

[node name="Control3" parent="AgilityContainer" instance=ExtResource( 4 )]
margin_left = 508.0
margin_right = 508.0
margin_bottom = 40.0

[node name="ItemImg" parent="AgilityContainer/Control3/ShopDisplay" index="0"]
texture = ExtResource( 5 )

[node name="StrengthLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -479.0
margin_top = -140.0
margin_right = -177.0
margin_bottom = -94.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Strength"
align = 1

[node name="StrengthInfo" type="NinePatchRect" parent="."]
margin_left = 135.0
margin_top = 381.0
margin_right = 489.0
margin_bottom = 501.0
texture = SubResource( 13 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 40

[node name="Coin" type="Sprite" parent="StrengthInfo"]
position = Vector2( 24, 95 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="LabelTitle" type="Label" parent="StrengthInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -56.0
margin_right = 154.0
margin_bottom = -28.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 10 )
text = "Stamina II"
align = 1

[node name="Label" type="Label" parent="StrengthInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -23.5
margin_right = 135.0
margin_bottom = 21.5
grow_horizontal = 2
custom_fonts/font = SubResource( 11 )
text = "Your max carry weight will be increased by 20%"
align = 1
autowrap = true

[node name="Price" type="Label" parent="StrengthInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 22.0
margin_right = -90.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 12 )
text = "1000"
align = 1

[node name="StrengthContainer" type="HBoxContainer" parent="."]
margin_left = 135.0
margin_top = 270.0
margin_right = 643.0
margin_bottom = 310.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 254

[node name="Control" parent="StrengthContainer" instance=ExtResource( 4 )]
margin_right = 0.0
margin_bottom = 40.0

[node name="Label" parent="StrengthContainer/Control/ShopDisplay" index="3"]
text = "I"

[node name="Control2" parent="StrengthContainer" instance=ExtResource( 4 )]
margin_left = 254.0
margin_right = 254.0
margin_bottom = 40.0

[node name="Label" parent="StrengthContainer/Control2/ShopDisplay" index="3"]
text = "II"

[node name="Control3" parent="StrengthContainer" instance=ExtResource( 4 )]
margin_left = 508.0
margin_right = 508.0
margin_bottom = 40.0

[node name="StaminaLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 176.0
margin_top = -140.0
margin_right = 478.0
margin_bottom = -94.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 5 )
text = "Stamina"
align = 1

[node name="StaminaInfo" type="NinePatchRect" parent="."]
margin_left = 789.0
margin_top = 381.0
margin_right = 1143.0
margin_bottom = 501.0
rect_pivot_offset = Vector2( -40, 79 )
texture = SubResource( 14 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 40

[node name="Coin" type="Sprite" parent="StaminaInfo"]
position = Vector2( 24, 95 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="LabelTitle" type="Label" parent="StaminaInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -56.0
margin_right = 154.0
margin_bottom = -28.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 10 )
text = "Stamina II"
align = 1

[node name="Label" type="Label" parent="StaminaInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -23.5
margin_right = 135.0
margin_bottom = 21.5
grow_horizontal = 2
custom_fonts/font = SubResource( 11 )
text = "Your max carry weight will be increased by 20%"
align = 1
autowrap = true

[node name="Price" type="Label" parent="StaminaInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 22.0
margin_right = -90.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 12 )
text = "1000"
align = 1

[node name="StaminaContainer" type="HBoxContainer" parent="."]
margin_left = 789.0
margin_top = 270.0
margin_right = 1297.0
margin_bottom = 310.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 254

[node name="Control" parent="StaminaContainer" instance=ExtResource( 4 )]
margin_right = 0.0
margin_bottom = 40.0

[node name="ItemImg" parent="StaminaContainer/Control/ShopDisplay" index="0"]
texture = ExtResource( 6 )

[node name="Label" parent="StaminaContainer/Control/ShopDisplay" index="3"]
text = "I"

[node name="Control2" parent="StaminaContainer" instance=ExtResource( 4 )]
margin_left = 254.0
margin_right = 254.0
margin_bottom = 40.0

[node name="ItemImg" parent="StaminaContainer/Control2/ShopDisplay" index="0"]
texture = ExtResource( 6 )

[node name="Label" parent="StaminaContainer/Control2/ShopDisplay" index="3"]
text = "II"

[node name="Control3" parent="StaminaContainer" instance=ExtResource( 4 )]
margin_left = 508.0
margin_right = 508.0
margin_bottom = 40.0

[node name="ItemImg" parent="StaminaContainer/Control3/ShopDisplay" index="0"]
texture = ExtResource( 6 )

[node name="BuyButtonBackground" type="NinePatchRect" parent="."]
margin_left = 523.0
margin_top = 635.0
margin_right = 1320.0
margin_bottom = 815.0
rect_scale = Vector2( 0.3, 0.3 )
texture = SubResource( 15 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="BuyButtonBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.833
margin_top = -80.0
margin_right = 308.167
margin_bottom = 40.0
grow_horizontal = 2
custom_fonts/font = SubResource( 16 )
text = "Buy upgrade"

[node name="BuyButton" type="Button" parent="BuyButtonBackground"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 797.0
margin_bottom = 180.0

[connection signal="pressed" from="NinePatchRect/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="BuyButtonBackground/BuyButton" to="." method="_on_BuyButton_pressed"]

[editable path="AgilityContainer/Control"]
[editable path="AgilityContainer/Control2"]
[editable path="AgilityContainer/Control3"]
[editable path="StrengthContainer/Control"]
[editable path="StrengthContainer/Control2"]
[editable path="StaminaContainer/Control"]
[editable path="StaminaContainer/Control2"]
[editable path="StaminaContainer/Control3"]
